--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 
 							<div class="hovereffect">
-								<img class="img-responsive" src="img/cp3.jpg" alt="" style="width:320px;height:382px;">
+								<img class="img-responsive" src="img/cp3.JPG" alt="" style="width:320px;height:382px;">
 								<div class="overlay">
 									<h2>Dr. Annie Jacob</h2>
 									<a class="info" href="#">Director, Hindustan Group of Institutions</a>
