--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 							<li>Space Environment and Aviation Technology</li>
 							<li>Operation Research</li>
 							<li>Computational Fluid Dynamics</li>
+								<li>Computational and theoritical physics </li>
+									<li>Condensed Matter</li>
 							</p>
 						</div>
 						<div class="col-lg-6">
@@ -222,6 +224,8 @@
 							<li>Number Theory</li>
 							<li>Optimization</li>
 							<li>Differential Equations</li>
+							<li>Optical materials</li>
+							<li>Atmosphere Physics</li>
 						</div>
 						<h5> * Any other topic related to Science, Engineering & Technology</h5>
 					</div>
@@ -308,7 +312,7 @@
 						<div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
 
 							<div class="hovereffect">
-								<img class="img-responsive" src="img/cp3.JPG" alt="" style="width:320px;height:382px;">
+								<img class="img-responsive" src="img/cp3.jpg" alt="" style="width:320px;height:382px;">
 								<div class="overlay">
 									<h2>Dr. Annie Jacob</h2>
 									<a class="info" href="#">Director, Hindustan Group of Institutions</a>
@@ -616,7 +620,7 @@ Kuala Lumpur</a>
 
 	</div>
 		<br><br>
-<div class="row">
+<!--<div class="row">
 	<h4 style="color:green">Organizing Committee<br></h4>
 	<br>
 	<div class="row">
@@ -694,7 +698,7 @@ Kuala Lumpur</a>
 				<a class="info" href="#">Department of Electronics & Communication Engineering, KCG College of technology, Chennai</a>
 			</div>
 		</div>
-	</div>
+	</div>-->
 </div>
 			</section>
 
