--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 									<li class="menu-has-children"><a href="#Reach">Reach Us</a>
 				            <ul>
 				              <li><a href="#Reach">Venue</a></li>
-				              <li><a href="#Reach">Contact</a></li>
+				              <li><a href="#Contact">Contact</a></li>
 				            </ul>
 				          </li>
 									<li><a class="ticker-btn" href="#">Register</a></li>
@@ -142,14 +142,14 @@
 								<table class="schdule-table table ">
 									<tr>
 										<th class="name" scope="row">Abstract submission deadline</th>
-										<td>31st Dec, 2019 </td>
+										<td>30th Dec, 2019 </td>
 										</tr>
 						<tr>
 							<th class="name" scope="row">Full paper submission deadline</th>
-							<td>28th Feb, 2020</td>
+							<td>15th Jan, 2020</td>
 							</tr>
 							<th class="name" scope="row">Notification of Acceptance/Rejection</th>
-							<td>31st Mar, 2020 </td>
+							<td>15th Feb, 2020 </td>
 							</tr>
 							<th class="name" scope="row">Final Date of Registration</th>
 							<td>5th April, 2020</td>
@@ -1014,6 +1014,36 @@ Tamil Nadu. India.
 	      </div>
 				<br>
 				<br>
+				<div class="section-header" id="Contact">
+					<h2>Contact  Us</h2>
+				</div>
+				<div class="row justify-content-center align-items-center ">
+					<div class="col-lg-6 video-left">
+						<h4> Publications & Proceedings</h4>
+						<h5> Dr. Deepa Jose</h5>
+						<p> 9840929084</p>
+						<br>
+						<h4> Transport & Logistics</h4>
+						<h5> Dr. Prabhuraj Shanmugam</h5>
+						<p> 8056438153</p>
+						<br>
+					</div>
+
+				<div class="col-lg-6 video-right">
+					<h4> Paper Submission</h4>
+					<h5> Dr. S. Palaniappan</h5>
+					<p> 9941686455</p>
+					<h5> Dr. R. Anand</h5>
+					<p>8939594188</p>
+					<br>
+					<h4> Sponsorship</h4>
+					<h5> Dr.Andal</h5>
+					<p> 9943421929</p>
+					<br>
+				</div>
+			</div>
+
+
 	    </section><!-- #contact -->
 
 			<!-- Start brand Area -->
